[tool.poetry]
name = "physical"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
adafruit-circuitpython-servokit = "^1.3.17"
adafruit-circuitpython-mpu6050 = "^1.2.4"
gpiozero = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
